Added diabetes data

--- a/cursos/espanol/datascience/4_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4_caja_negra.ipynb
@@ -53,6 +53,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d07dc75f-b386-4b03-853c-d171fe0acd65",
+   "metadata": {},
+   "source": [
+    "Ahora para poder entrenar a nuestra caja negra separamos las columna que queremos predecir del resto de las columnas:\n",
+    "1. El resto de las columnas las guardaremos en una variable llamada X\n",
+    "2. La columna a predecir la guardaremos en una variable llamada y\n",
+    "\n",
+    "Esto hace que la caja negra pueda saber cual es la variable que tiene que predecir y cuales son las variables que debe usar para hacer esa prediccion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "d96f624b-e458-4bc9-8b58-c4a8c9a56484",
@@ -104,7 +116,7 @@
    "id": "645394ca-d525-449d-9d3a-2617b74f30a9",
    "metadata": {},
    "source": [
-    "Entrenamos nuestra caja negra:"
+    "Entrenamos nuestra caja negra utilizando la funcion fit() que recibe las variables X e y:"
    ]
   },
   {
@@ -266,6 +278,14 @@
    ],
    "source": [
     "caja_negra.predict(mi_telefono)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13df4668-caaf-4601-9813-6ffdb4844723",
+   "metadata": {},
+   "source": [
+    "Predice que el precio de mi telefono debe ser 442.09 euros"
    ]
   },
   {
