Updated types of ML algorithms

--- a/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb
@@ -15,44 +15,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c31932d6-c076-44ea-9a33-df767b6abbca",
+   "metadata": {},
+   "source": [
+    "### Ejercicio:\n",
+    "\n",
+    "Adivinar que tipo de caja negra (Regresion o Clasificacion) debemos utilizar en cada uno de los siguientes problemas:\n",
+    "- Adivinar el mejor valor de venta de una casa\n",
+    "- Adivinar si a alguien le va a gustar una pelicula o no\n",
+    "- Adivinar si alguien va a devolver un credito o no\n",
+    "- Adivinar cuanto gastara el próximo mes una persona\n",
+    "- Adivinar cuantos viajes hara un taxi en su horario de trabajo\n",
+    "- Adivinar la palabra que falta en un texto de examen de ingles\n",
+    "- Adivinar sobre que tema habla un texto\n",
+    "- Adivinar si una compra con tarjeta de credito es fraude\n",
+    "- Adivinar la edad de una persona mediante una fotografia\n",
+    "- Adivinar si el semaforo esta rojo o verde\n",
+    "- Adivinar si a alguien le va a gustar un producto o no"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11891735-6fc5-4680-951f-9f4a495f910e",
+   "id": "c2057b99-6b2e-439a-96f2-dfba2cec4ab3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#@title Ver Solucion Ejercicio {display-mode:\"form\"}\n",
+    "\n",
+    "#- Adivinar el mejor valor de venta de una casa (REGRESION)\n",
+    "#- Adivinar si a alguien le va a gustar una pelicula o no (CLASIFICACION)\n",
+    "#- Adivinar si alguien va a devolver un credito o no (CLASIFICACION)\n",
+    "#- Adivinar cuanto gastara el próximo mes una persona (REGRESION)\n",
+    "#- Adivinar cuantos viajes hara un taxi en su horario de trabajo (REGRESION)\n",
+    "#- Adivinar la palabra que falta en un texto de examen de ingles (CLASIFICACION)\n",
+    "#- Adivinar sobre que tema habla un texto (CLASIFICACION)\n",
+    "#- Adivinar si una compra con tarjeta de credito es fraude (CLASIFICACION)\n",
+    "#- Adivinar la edad de una persona mediante una fotografia (CLASIFICACION)\n",
+    "#- Adivinar si el semaforo esta rojo o verde (CLASIFICACION)\n",
+    "#- Adivinar si a alguien le va a gustar un producto o no (CLASIFICACION)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f2b42437-b1ba-4475-a7cc-c5665e320638",
    "metadata": {},
    "source": [
-    "Algoritmos mas conocidos y que veremos en mas detalle en las proximas unidades:\n",
+    "## Clasificacion de Cajas Negras por Algoritmo utilizado\n",
+    "\n",
+    "Existen muchos algoritmos que pueden ser usados como cajas negras para predecir.\n",
+    "\n",
+    "En las proximas unidades veremos mas en detalle algunos de los mas utilizados:\n",
+    "\n",
     "- KNN\n",
     "- Arboles de decision\n",
     "- Regresion Lineal y Regresion Logistica\n",
     "- Naive Bayes\n",
+    "- Redes Neuronales\n",
     "\n",
-    "Tambien hay algoritmos que utilizan una combinacion de varios para crear uno mejor, estos se llaman ensambles.\n",
+    "Tambien hay algoritmos que utilizan una combinacion de varios para crear uno mejor, estos se llaman **ensambles**.\n",
     "\n",
-    "Todos estos algoritmos existen para ambas clases de prediccion: regresion y clasificacion."
+    "Todos estos algoritmos existen para ambas clases de prediccion: **regresion y clasificacion**."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3616240-76e4-41c3-8984-01ecdd6145ae",
+   "cell_type": "markdown",
+   "id": "c6608a93-09e8-43ed-829d-7a339e914fc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44ec05a0-ebca-4aed-87f9-840e89e64912",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
