Added datascience material

--- a/cursos/espanol/datascience/1_pandas.ipynb
+++ b/cursos/espanol/datascience/1_pandas.ipynb
@@ -248,6 +248,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36ea8f10-e6d1-43f9-8bc2-e97238947969",
+   "metadata": {},
+   "source": [
+    "index=False indica que no queremos que la columna de indices se guarde en el archivo de texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d77ac5eb-c4be-4065-a7f4-70396bc37e39",
    "metadata": {},
    "source": [
