--- a/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb
@@ -21,18 +21,18 @@
    "source": [
     "### Ejercicio:\n",
     "\n",
-    "Adivinar que tipo de caja negra (Regresion o Clasificacion) debemos utilizar en cada uno de los siguientes problemas:\n",
-    "- Adivinar el mejor valor de venta de una casa\n",
-    "- Adivinar si a alguien le va a gustar una pelicula o no\n",
-    "- Adivinar si alguien va a devolver un credito o no\n",
-    "- Adivinar cuanto gastara el próximo mes una persona\n",
-    "- Adivinar cuantos viajes hara un taxi en su horario de trabajo\n",
-    "- Adivinar la palabra que falta en un texto de examen de ingles\n",
-    "- Adivinar sobre que tema habla un texto\n",
-    "- Adivinar si una compra con tarjeta de credito es fraude\n",
-    "- Adivinar la edad de una persona mediante una fotografia\n",
-    "- Adivinar si el semaforo esta rojo o verde\n",
-    "- Adivinar si a alguien le va a gustar un producto o no"
+    "Decir que tipo de caja negra (Regresion o Clasificacion) debemos utilizar en cada uno de los siguientes problemas:\n",
+    "- Predecir el mejor valor de venta de una casa\n",
+    "- Predecir si a alguien le va a gustar una pelicula o no\n",
+    "- Predecir si alguien va a devolver un credito o no\n",
+    "- Predecir cuanto gastara el próximo mes una persona\n",
+    "- Predecir cuantos viajes hara un taxi en su horario de trabajo\n",
+    "- Predecir la palabra que falta en un texto de examen de ingles\n",
+    "- Predecir sobre que tema habla un texto\n",
+    "- Predecir si una compra con tarjeta de credito es fraude\n",
+    "- Predecir la edad de una persona mediante una fotografia\n",
+    "- Predecir si el semaforo esta rojo o verde\n",
+    "- Predecir si a alguien le va a gustar un producto o no"
    ]
   },
   {
@@ -44,17 +44,17 @@
    "source": [
     "#@title Ver Solucion Ejercicio {display-mode:\"form\"}\n",
     "\n",
-    "#- Adivinar el mejor valor de venta de una casa (REGRESION)\n",
-    "#- Adivinar si a alguien le va a gustar una pelicula o no (CLASIFICACION)\n",
-    "#- Adivinar si alguien va a devolver un credito o no (CLASIFICACION)\n",
-    "#- Adivinar cuanto gastara el próximo mes una persona (REGRESION)\n",
-    "#- Adivinar cuantos viajes hara un taxi en su horario de trabajo (REGRESION)\n",
-    "#- Adivinar la palabra que falta en un texto de examen de ingles (CLASIFICACION)\n",
-    "#- Adivinar sobre que tema habla un texto (CLASIFICACION)\n",
-    "#- Adivinar si una compra con tarjeta de credito es fraude (CLASIFICACION)\n",
-    "#- Adivinar la edad de una persona mediante una fotografia (CLASIFICACION)\n",
-    "#- Adivinar si el semaforo esta rojo o verde (CLASIFICACION)\n",
-    "#- Adivinar si a alguien le va a gustar un producto o no (CLASIFICACION)"
+    "#- Predecir el mejor valor de venta de una casa (REGRESION)\n",
+    "#- Predecir si a alguien le va a gustar una pelicula o no (CLASIFICACION)\n",
+    "#- Predecir si alguien va a devolver un credito o no (CLASIFICACION)\n",
+    "#- Predecir cuanto gastara el próximo mes una persona (REGRESION)\n",
+    "#- Predecir cuantos viajes hara un taxi en su horario de trabajo (REGRESION)\n",
+    "#- Predecir la palabra que falta en un texto de examen de ingles (CLASIFICACION)\n",
+    "#- Predecir sobre que tema habla un texto (CLASIFICACION)\n",
+    "#- Predecir si una compra con tarjeta de credito es fraude (CLASIFICACION)\n",
+    "#- Predecir la edad de una persona mediante una fotografia (CLASIFICACION)\n",
+    "#- Predecir si el semaforo esta rojo o verde (CLASIFICACION)\n",
+    "#- Predecir si a alguien le va a gustar un producto o no (CLASIFICACION)"
    ]
   },
   {
