--- a/cursos/espanol/datascience/4.6_ensambles.ipynb
+++ b/cursos/espanol/datascience/4.6_ensambles.ipynb
@@ -7,6 +7,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e86633e1-60fd-4bac-9b51-16625136fe9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a4a376-1027-43a3-81a6-bdba9354d488",
+   "metadata": {},
+   "source": [
+    "1. Clase MIT (Patrick Winston): https://ocw.mit.edu/courses/6-034-artificial-intelligence-fall-2010/resources/lecture-17-learning-boosting/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abba0ea2-8520-49f9-8440-335bd9e0911f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
