Update units 6 and 7

--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "# supongamos que los datos verdaderos son\n",
-    "y_verdadero = [1,2,3,4]\n",
-    "y_predecido = [1.1,2.1,3.1,4.1]"
+    "y_verdadero = [1.0, 2.0, 3.0, 4.0]\n",
+    "y_predecido = [1.3, 2.1, 3.2, 4.8]"
    ]
   },
   {
@@ -165,12 +165,12 @@
     "\n",
     "Como vemos el objetivo es obtener los errores de Entrenamiento y Prueba bajos.\n",
     "\n",
-    "- El **Error de Entrenamiento alto** puede estar dado por una de las siguientes condiciones:\n",
+    "- El **Error de Entrenamiento alto** (tambien conocido como **Underfitting** en ingles) puede estar dado por una de las siguientes condiciones:\n",
     "  - Necesitamos mas datos para entrenar nuestra caja negra\n",
     "  - Necesitamos una caja negra que predecir datos complejos de predecir, por ejemplo los ensambles pueden predecir datos mas complejos que una regresion lineal o naive bayes porque no asumen ninguna hipotesis respecto a los datos.\n",
-    "- El **Error de Prueba alto** puede estar dado por una de las siguientes condiciones:\n",
+    "- El **Error de Prueba alto** (tambien conocido como **Overfitting** en ingles) puede estar dado por una de las siguientes condiciones:\n",
     "  - Necesitamos mas datos para entrenar nuestra caja negra\n",
-    "  - Necesitamos una caja negra mas simple o un metodo para evitar que la caja negra se ajuste demasiado a los datos de prueba. Estos metodos se llaman de regularizacion"
+    "  - Necesitamos una caja negra mas simple o un metodo para evitar que la caja negra se ajuste demasiado a los datos de prueba. Estos metodos se llaman de **regularizacion**"
    ]
   },
   {
@@ -241,6 +241,14 @@
    "outputs": [],
    "source": [
     "metrics.r2_score(y_verdadero, y_predecido)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cd671f1-bd16-4116-857f-97a30aff25f1",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
    ]
   }
  ],
