--- a/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb
+++ b/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb
@@ -10,17 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2c9ed198-239a-4738-8571-39a39b7855b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://matplotlib.org/stable/tutorials/index\n",
-    "#https://matplotlib.org/stable/tutorials/introductory/quick_start.html#sphx-glr-tutorials-introductory-quick-start-py"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "d238c52c-55d0-4561-add3-9f98896886c7",
    "metadata": {},
@@ -34,7 +23,10 @@
   {
    "cell_type": "markdown",
    "id": "ea06a8cf-b14a-48a3-b1a5-eac1a7dbc02f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Componentes fundamentales de un grafico de matplotlib"
    ]
@@ -42,7 +34,10 @@
   {
    "cell_type": "markdown",
    "id": "baed3236-b938-425b-817e-e745526454e6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Ejemplo simple"
    ]
@@ -95,7 +90,10 @@
   {
    "cell_type": "markdown",
    "id": "f93a4dfa-d1fa-474d-9725-74e350fbb9a5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Anatomia de una figura\n",
     "\n",
@@ -334,7 +332,10 @@
   {
    "cell_type": "markdown",
    "id": "6f33472e-b55c-4c54-aead-272965e8b508",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Estilos\n",
     "\n",
@@ -859,7 +860,10 @@
   {
    "cell_type": "markdown",
    "id": "4c8a4a03-fea3-4cda-99bd-2b0d34a0d498",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Tipos de graficos\n",
     "\n",
@@ -869,7 +873,10 @@
   {
    "cell_type": "markdown",
    "id": "9eda90b3-e51c-4268-ad5a-a4ffe177ff93",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Plot\n",
     "\n",
@@ -914,7 +921,10 @@
   {
    "cell_type": "markdown",
    "id": "d5c39183-37e5-486f-b7e7-7c9cce3de15c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Scatter\n",
     "\n",
@@ -963,7 +973,10 @@
   {
    "cell_type": "markdown",
    "id": "3c282afc-e2e5-4729-ac8f-8bedc1d88b5f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Bar\n",
     "\n",
@@ -1009,7 +1022,10 @@
   {
    "cell_type": "markdown",
    "id": "1f6a0ad6-db4e-4732-b44e-f170dbc09471",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Hist\n",
     "\n",
@@ -1054,7 +1070,10 @@
   {
    "cell_type": "markdown",
    "id": "a80ba976-cb68-4e1d-a6e3-2b2c8b4678e0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Boxplot\n",
     "\n",
@@ -1104,7 +1123,10 @@
   {
    "cell_type": "markdown",
    "id": "a24b7af6-421c-4055-b8a9-a31c6d5a5e98",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ejercicios Matplotlib "
    ]
@@ -1112,7 +1134,10 @@
   {
    "cell_type": "markdown",
    "id": "e64c90f0-2e58-45bc-9aa6-0f75b147a5db",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Ejercicio 1\n",
     "\n",
@@ -1261,7 +1286,10 @@
   {
    "cell_type": "markdown",
    "id": "26878cef-b434-4e1e-9825-870d08f6bead",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Ejercicio 2\n",
     "\n",
@@ -1659,12 +1687,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14065117-d0cf-4e86-93c3-d186d342b323",
+   "cell_type": "markdown",
+   "id": "150150ce-9b48-4467-b8eb-e5f1d0e0508d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Esta unidad esta basada en la documentacion oficial de matplotlib, la cual puedes encontrar aqui: \n",
+    "- https://matplotlib.org/stable/tutorials/index\n",
+    "- https://matplotlib.org/stable/tutorials/introductory/quick_start.html#sphx-glr-tutorials-introductory-quick-start-py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c885ae4-7967-4d1d-bb40-990ce07a6a47",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
