--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -1,37 +1,58 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "834dbf59-a999-427d-b110-95ad97afcbea",
+   "cell_type": "markdown",
+   "id": "c1d9a7e6-ad54-4aab-8104-fe648d640f1f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Graficos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c53a86f9-968a-4741-8b3a-6e20acd38658",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Crear graficos es simple. Si recordamos como lo haciamos en la escuela, aqui es igual. Tenemos dos ejes:\n",
+    "- Eje x\n",
+    "- Eje y\n",
+    "\n",
+    "Y le pasaremos a la funcion que realiza el grafico la lista de valores que queremos que dibuje en dichos ejes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09dabcad-b832-45c7-8d79-982e44629048",
+   "metadata": {},
+   "source": [
+    "## La libreria seaborn\n",
+    "\n",
+    "Esta libreria nos permitira crear graficos de forma simple. Comencemos importando dicha libreria:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7b4cd61-78b1-49fd-ad72-4b5e5b8d2d41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://seaborn.pydata.org/tutorial/function_overview.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "a6104ca3-2626-4e25-8471-e34201026a9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "sns.set_theme()"
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5b91b3-9654-4a45-8aee-491d49a49e67",
+   "metadata": {},
+   "source": [
+    "Ahora carguemos una tabla de ejemplo que viene incluida en esta libreria y que contiene propinas que han dejado en un restaurante:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "59e774a8-f6c9-4d34-b153-f97c15947faf",
    "metadata": {},
    "outputs": [
@@ -136,16 +157,33 @@
        "4       24.59  3.61  Female     No  Sun  Dinner     4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Cargar dataset de ejemplo \"propinas\"\n",
     "tips = sns.load_dataset(\"tips\")\n",
     "print(type(tips),tips.shape)\n",
     "tips.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306ebe05-b7cd-474f-8c85-4afc7f2ea6e0",
+   "metadata": {},
+   "source": [
+    "Vemos que la tabla es un DataFrame de pandas con 244 filas y 7 columnas.\n",
+    "Las columnas son las siguientes:\n",
+    "- total_bill: el total de la cuenta\n",
+    "- tip: la propina\n",
+    "- sex: el sexo del mesero\n",
+    "- smoker: si es el area de fumadores o no\n",
+    "- day: dia de la semana\n",
+    "- time: si es almuerzo o cena\n",
+    "- size: cantidad de personas en la mesa\n",
+    "\n",
+    "Utilicemos ahora la libreria de graficos para analizar estos datos:"
    ]
   },
   {
@@ -426,7 +464,10 @@
   {
    "cell_type": "markdown",
    "id": "24af7464-e327-489a-a041-e80f9574e2d6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ejercicios:"
    ]
@@ -1079,12 +1120,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6b45fbe-48e0-46e7-ab6d-6ea85390d92b",
+   "cell_type": "markdown",
+   "id": "fcca237a-ba36-4eee-a065-dddd214765c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Esta unidad esta basada en la documentacion oficial de seaborn, la cual puedes encontrar aqui: https://seaborn.pydata.org/tutorial/function_overview.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e623176-c94f-4085-941d-32439d2e2f7f",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
