--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -213,7 +213,7 @@
     "\n",
     "y_verdadero = [\"benigno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\"]\n",
     "y_prob = [0.2, 0.91, 0.85, 0.55, 0.3]\n",
-    "# suponiendo que elejimos como unbral 0.5\n",
+    "# suponiendo que elegimos como unbral 0.5\n",
     "y_predecido = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
     "\n",
     "metrics.precision_score(y_verdadero, y_predecido)\n",
