--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -193,7 +193,9 @@
     "tags": []
    },
    "source": [
-    "## Analisis de una variable"
+    "## Analisis de una variable\n",
+    "\n",
+    "Veremos ahora funciones de seaborn que nos permiten hacer graficos para obtener informacion de una sola variable. Entonces en este caso solo debemos pasarle una lista de valores para el eje x. Como trabajaremos con tablas de pandas, es decir DataFrames, bastara con pasarle el nombre de la columna que queremos graficar."
    ]
   },
   {
@@ -204,6 +206,14 @@
    },
    "source": [
     "### Variables categoricas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8b53def-5ba2-48d8-b932-8e0f04f5b71a",
+   "metadata": {},
+   "source": [
+    "A continuacion utilizaremos la fucion countplot de seaborn para mostrar un grafico de barras que muestra la cantidad de valores de cada tipo:"
    ]
   },
   {
@@ -238,16 +248,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61049fa1-8af4-4391-ab11-04722c691d20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.catplot(data=tips, x=\"sex\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "aa82c45b-c480-4d9d-b9ac-069bbc47f3ac",
    "metadata": {
@@ -255,6 +255,14 @@
    },
    "source": [
     "### Variables numericas, discretas o continuas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "879983a8-bb34-44c7-8492-64656770c0fd",
+   "metadata": {},
+   "source": [
+    "La funcion histplot muestra un histograma de una variable numerica:"
    ]
   },
   {
@@ -286,6 +294,14 @@
    ],
    "source": [
     "sns.histplot(data=tips, x=\"tip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e09b528-fd62-4236-bc64-0cb8e7b60a0c",
+   "metadata": {},
+   "source": [
+    "La funcion kdeplot muestra la distribucion de una variable numerica:"
    ]
   },
   {
@@ -330,6 +346,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2f46ff4-b84a-4fdf-bf25-2c3eb9b5395c",
+   "metadata": {},
+   "source": [
+    "En los siguientes graficos podemos graficar la relacion de dos variables eligiendo que columna queremos graficar en el eje x y que columna en el eje y. Adicionalmente podemos ver como se relaciona una tercera variable con estas dos mediante el color a traves del parametro hue."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "d47a811b-d857-4ebc-8fdd-5ebaff58ac27",
@@ -358,6 +382,14 @@
    ],
    "source": [
     "sns.scatterplot(data=tips, x=\"total_bill\", y=\"tip\", hue=\"sex\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e39a86-f413-4e82-99d6-1db76a451c11",
+   "metadata": {},
+   "source": [
+    "Otra forma de relacionar una tercer variable con las dos especificadas por x e y es a traves del atributo col con el cual seaborn me generara un grafico separado para cada valor categorico de esa variable. En el grafico a continuacion vemos que los colores han sido separados en dos graficos distintos:"
    ]
   },
   {
@@ -465,7 +497,6 @@
    "cell_type": "markdown",
    "id": "24af7464-e327-489a-a041-e80f9574e2d6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
